--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -10,8 +10,7 @@
   <link rel='stylesheet' href='/global.css'>
   <link rel='stylesheet' href='/build/bundle.css'>
 
-  <script>console.log(location.pathname)</script>
-  <script defer src='/build/bundle.js'></script>
+  <script defer src='./build/bundle.js'></script>
 </head>
 
 <body>
